--- a/MOKEPON .html
+++ b/MOKEPON .html
@@ -31,7 +31,7 @@
             <p>
             <button id="boton-fuego">FUEGO 🔥</button>
             <button id="boton-agua">AGUA 💧</button>
-            <button>TIERRA 🌱</button>
+            <button id="boton-tierra">TIERRA 🌱</button>
             </p>
         </section>
 
