Funtional reset botton and block select pj botton

--- a/MOKEPON .html
+++ b/MOKEPON .html
@@ -25,7 +25,7 @@
         </section>
 
         <section id="seleccionar-ataque">
-            <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
+            <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador" >3</span> vidas</p>
             <p>La mascota <span id="mascota-del-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
 
 
@@ -41,7 +41,7 @@
         </section>
 
         <section id="reiniciar">
-            <button>Reiniciar</button>
+            <button id="boton-reiniciar">Reiniciar</button>
 
         </section>
 
