--- a/MOKEPON .html
+++ b/MOKEPON .html
@@ -13,17 +13,26 @@
         <section id="seleccionar-mascota">
 
             <h1 class="titulo" > Mokepon 🔥💧🌱</h1>
-            <h2 class="subtitulo">elige tu mascota:</h2>
+            <h2 class="subtitulo" >Elige tu mascota:</h2>
 
            
 
             <div class="tarjetas">
 
-                <label class="tarjeta-de-mokepon" for="Hipodoge">Hipodoge</label>
+                <label class="tarjeta-de-mokepon" for="Hipodoge">
+                    <p>Hipodoge</p>
+                    <img src="./Assets/mokepons_mokepon_hipodoge_attack.png" alt="Hipodoge">
+                </label>
                 <input type="radio" id="Hipodoge" name="mascota" /> 
-                <label class="tarjeta-de-mokepon" for ="Capipepo">Capipepo</label>
+                <label class="tarjeta-de-mokepon" for ="Capipepo">
+                    <p>Capipepo</p>
+                    <img src="./Assets/mokepons_mokepon_capipepo_attack.png" alt="Capipepo">
+                </label>
                 <input  type="radio" id="Capipepo" name="mascota" />  
-                <label class="tarjeta-de-mokepon" for ="Ratigueya" >Ratigueya</label>
+                <label class="tarjeta-de-mokepon" for ="Ratigueya" >
+                    <p>Ratigueya</p>
+                    <img src="./Assets/mokepons_mokepon_ratigueya_attack.png" alt="Ratigueya">
+                </label>
                 <input type="radio" id="Ratigueya" name="mascota" /> 
 
             </div>
