--- a/MOKEPON .html
+++ b/MOKEPON .html
@@ -18,7 +18,7 @@
            
 
             <div id="contenedor-tarjetas" class="tarjetas">            
-
+              <!--  tarjetas inyectadas mediante js -->
             </div>                          
 
             <button id="boton-seleccionar">Seleccionar</button>
