--- a/MOKEPON .html
+++ b/MOKEPON .html
@@ -32,10 +32,10 @@
 
             <h2 class="subtitulo">Elige tu ataque: </h2>
 
-            <div class="grupo-botones-ataque" >
-                <button id="boton-fuego" class="botones-ataque" >FUEGO 🔥</button>
-                <button id="boton-agua" class="botones-ataque" >AGUA 💧</button>
-                <button id="boton-tierra" class="botones-ataque">TIERRA 🌱</button>
+            <div class="grupo-botones-ataque" id="botones-ataque">
+                <!-- <button id="boton-fuego" class="botones-ataque" >FUEGO 🔥</button> -->
+                <!-- <button id="boton-agua" class="botones-ataque" >AGUA 💧</button> -->
+                <!-- <button id="boton-tierra" class="botones-ataque">TIERRA 🌱</button> -->
             </div>
 
             
