--- a/MOKEPON .html
+++ b/MOKEPON .html
@@ -26,6 +26,15 @@
 
         </section>
 
+        <section id="ver-mapa">
+            <h1 class="titulo" > Recorre el mapa con tu Mokepon </h1>
+            <canvas id="mapa"></canvas>
+            <button onClick="moverCapipepoDer()">Der</button>
+            <button onClick="moverCapipepoUp()">Up</button>
+            <button onClick="moverCapipepoIzq()">Izq</button>
+            <button onClick="moverCapipepoDown()">Down</button>
+        </section>
+
         <section id="seleccionar-ataque">
 
             <h1 class="titulo" > Mokepon 🔥💧🌱</h1>
@@ -61,7 +70,7 @@
                     <p id="mascota-del-enemigo"></p>
                     <div id="ataques-del-enemigo"></div>
 
-                </div>                       
+                </div>                  
 
             </div>                   
         </section> 
